--- a/index.html
+++ b/index.html
@@ -4,8 +4,58 @@
 	</head>
 	
 	<body>
-	
-	
+		<h1>
+		Тестовая страница
+		</h1>
+		
+		<form>
+		<p>
+		Username:<Br>
+		<input type="text" size="25"><Br>
+		Password:<Br>
+		<input type="password" size="25"><Br><Br>
+		<input type="submit" value="Enter">
+		</p>
+		</form>
+		
+		<table border="2" width="200px" height="200px">
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>	
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</table>
+		
+		<p>Для создания Git-репозитория вы можете использовать два основных подхода.<Br> 
+		Во-первых, импорт в Git уже существующего проекта или директории.<Br> 
+		Во-вторых, клонирование существующего репозитория с другого сервера.<Br>
+		</p>
+		
 	</body>
 
 
